# AKAFO-Speiseplan-Parser

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/cli/: Cargo.toml
examples/cli/src/: main.rs
examples/discord-bot/: Cargo.toml
examples/discord-bot/src/: main.rs  menu_command.rs
src/: lib.rs
