[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version="0.11", features=["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"]}
akafo-menu-parser = { path="../.." }
chrono = "0.4.23"
